add repo secret into env

--- a/.github/workflows/check-black-formatting.yml
+++ b/.github/workflows/check-black-formatting.yml
@@ -1,6 +1,6 @@
 name: Check Python formatting using Black
 env:
-      GITHUB_TOKEN: ${{ secrets.SUPERSECRET }}
+      super_secret: ${{ secrets.SUPERSECRET }}
 
 on:
   push:
