--- a/.github/workflows/check-prettier-formatting.yml
+++ b/.github/workflows/check-prettier-formatting.yml
@@ -7,17 +7,13 @@ on:
 
 jobs:
   validate:
+    name: Prettier
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout base repo
-      uses: actions/checkout@v2
-      uses: actions/setup-node@v1
-      with:
-        node-version: "14"
-
-    - name: Install NPM dependencies
-      run: npm install
-
-    - name: Run Prettier
-      run: npm run format
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14"
+      - run: npm install
+      - run: npm run format
