--- a/.github/workflows/check-prettier-formatting.yml
+++ b/.github/workflows/check-prettier-formatting.yml
@@ -1,21 +1,20 @@
 name: Check JSON formatting using Prettier
 
-on:
-  push:
-    paths:
-    - "**.json"
+on: [push]
 
 jobs:
-  lint:
-    name: Prettier
+  prettier:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "14"
-      - run: npm install
-      - run: npm run format
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install NPM dependencies
+        run: npm ci
+
+      - name: Run Prettier
+        run: npm run format
+
 
 
