--- a/.github/workflows/check-prettier-formatting.yml
+++ b/.github/workflows/check-prettier-formatting.yml
@@ -15,4 +15,4 @@ jobs:
         run: npm ci
 
       - name: Run Prettier
-        run: npm prettier --check 'src/data/*.json
+        run: npm prettier --check 'src/data/*.json'
