--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "prettier --write 'src/data/*.json'"
+        "format": "prettier --write 'src/data/*.json'",
+        "check": "prettier --check 'src/data/*.json'"
     },
     "repository": {
         "type": "git",
