--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "hooks": {
       "pre-commit": "git-format-staged -f 'prettier --ignore-unknown --stdin --stdin-filepath \"{}\"' ."
     }
+  },
+  "dependencies": {
+    "husky": "^6.0.0"
   }
 }
