--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
   },
   "homepage": "https://github.com/twhetzel/github-hooks-demo#readme",
   "devDependencies": {
+    "git-format-staged": "^2.1.1",
+    "husky": "^6.0.0",
     "prettier": "^1.19.1"
   },
   "husky": {
     "hooks": {
       "pre-commit": "git-format-staged -f 'prettier --ignore-unknown --stdin --stdin-filepath \"{}\"' ."
     }
-  },
-  "dependencies": {
-    "husky": "^6.0.0"
   }
 }
