--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/twhetzel/github-hooks-demo#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pretty-quick --staged"
+      "pre-commit": "check"
     }
   },
   "devDependencies": {
