--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/twhetzel/github-hooks-demo#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "check"
+      "pre-commit": "prettier --check '{src/**,src/data/**}.{json,js,ts,tsx}'"
     }
   },
   "devDependencies": {
