--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '{src/**,src/data/**}.{json,js,ts,tsx}'",
-    "check": "prettier --check '{src/**,src/data/**}.{json,js,ts,tsx}'"
+    "check": "prettier --check '{src/**,src/data/**}.{json,js,ts,tsx}'",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
