--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '{src/**,src/data/**}.{json,js,ts,tsx}'",
-    "check": "prettier --check '{src/**,src/data/**}.{json,js,ts,tsx}'",
-    "prepare": "husky install"
+    "check": "prettier --check '{src/**,src/data/**}.{json,js,ts,tsx}'"
   },
   "repository": {
     "type": "git",
@@ -20,16 +19,7 @@
     "url": "https://github.com/twhetzel/github-hooks-demo/issues"
   },
   "homepage": "https://github.com/twhetzel/github-hooks-demo#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": [
-        "echo \"Running [Husky] pre-commit tests...\""
-      ]
-    }
-  },
   "devDependencies": {
-    "git-format-staged": "^2.1.1",
-    "husky": "^6.0.0",
     "prettier": "^2.2.1"
   }
 }
