--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/twhetzel/github-hooks-demo#readme",
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "prettier": "2.2.1"
   }
 }
